--- a/public/index.html
+++ b/public/index.html
@@ -91,8 +91,10 @@
             <div class="title-bar">  
                 <div class="menu-bar">
                     <div class="menu-bar-area">
+             <!--        <wb:share-button appkey="1211791030" addition="number" type="button" pic="http%3A%2F%2F7u2spr.com1.z0.glb.clouddn.com%2F20151220-2113405676a984bf170.png" ralateUid="5738008040" default_text="你好"></wb:share-button> -->
+                 
                         <a class="menu-bar-item tupai-index" href="/#index">首页</a>
-                        <a class="menu-bar-item" href="/#trend">动态</a>
+                        <a class="menu-bar-item menu-bar-trend login-popup" href="/#trend">动态</a>
                         <a class="menu-bar-item " href="/#channel">频道</a>
                         <!-- <a class="menu-bar-item reply-index" href="/#replyflows">作品</a> -->
                         <a class="menu-bar-item" href="/bbs">讨论</a>
