--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,8 @@
             </div>
         </div>
         <div class="header"> 
-            <div class="width-hide blo">
-                <i class="scrollTop-icon clearfix bg-sprite-new"></i>
+            <div class="width-hide">
+                <i class="scrollTop-icon clearfix bg-sprite-new blo"></i>
                 
                 <a href="#login-popup" class="login-popup  hide login-popup-hide">
                     <i class="askForP-icon clearfix bg-sprite-new "></i>
