--- a/public/index.html
+++ b/public/index.html
@@ -69,22 +69,22 @@
                 <a href="#login-popup" class="login-popup  hide login-popup-hide">
                     <i class="askForP-icon clearfix bg-sprite-new "></i>
                 </a>
-                <div id="askReplyUploadHove" class="ask-uploading-popup-hide">
-                        <i class="askForP-icon clearfix bg-sprite-new" ></i>
-                        <div class="login-popup-contain clearfix">
-                            <div id="attrChannelId" class="login-demand-p">
-                                 <a href="#ask-uploading-popup" class="ask-uploading-popup">
-                                    <i class="bg-sprite-rebirth demand-icon upload-ask"></i>
-                                    <span>发布求P</span>
-                                </a>
-                            </div>
-                            <div class="login-upload">
-                                <a href="#inprogress-popup" class="inprogress-popup">
-                                    <i class="bg-sprite-rebirth upload-icon"></i>
-                                    <span>上传作品</span>
-                                </a>
-                            </div>
+                <div id="askReplyUploadHove" class="ask-uploading-popup-hide blo">
+                    <i class="askForP-icon clearfix bg-sprite-new" ></i>
+                    <div class="login-popup-contain clearfix">
+                        <div id="attrChannelId" class="login-demand-p">
+                             <a href="#ask-uploading-popup" class="ask-uploading-popup">
+                                <i class="bg-sprite-rebirth demand-icon upload-ask"></i>
+                                <span>发布求P</span>
+                            </a>
                         </div>
+                        <div class="login-upload">
+                            <a href="#inprogress-popup" class="inprogress-popup">
+                                <i class="bg-sprite-rebirth upload-icon"></i>
+                                <span>上传作品</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="title-bar">  
