--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,11 @@
     <a href="#homepage/reply/{{uid}}" target="_blank">
         <div class="search-item">
             <img src="{{avatar}}" alt="">
-            <span class="search-name">{{nickname}}</span>
+            <span class="search-name clearfix">
+
+            <var>{{nickname}}</var>
+            <i class="bg-sprite-rebirth small-v-icon"></i>
+            </span>
         </div>
     </a>
     {{/each}}
