--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="图派">
     <meta name="keywords" content="PS,社区">
+    <!-- wb -->
     <meta property="wb:webmaster" content="cd0d265f8e3e0cb0" />
+    <html xmlns:wb="http://open.weibo.com/wb">
+    <!-- h5  -->
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" /> 
+
     <link rel="stylesheet" type="text/css" href="/css/homepage.css?ver=0.0.36"  >
     <link rel="stylesheet" type="text/css" href="/css/index.css?ver=0.0.36">
     <link rel="stylesheet" type="text/css" href="/css/common.css?ver=0.0.36">
@@ -21,14 +28,11 @@
     <link rel="stylesheet" type="text/css" href="/css/setting.css?ver=0.0.36"  >
     <link rel="stylesheet" type="text/css" href="/css/message.css?ver=0.0.36" >
     <link rel="stylesheet" type="text/css" href="/css/search.css?ver=0.0.36"  >
+
+    <!-- plugin -->
     <link rel="stylesheet" type="text/css" href="/res/lib/fancybox/jquery.fancybox.css" > 
     <link rel="stylesheet" type="text/css" href="/res/lib/fancybox/main.css" > 
-    <!-- h5  -->
-    <meta  http-equiv="cache-control" content="max-age=0" />
-    <meta  http-equiv="cache-control" content="no-cache" />
-    <meta  name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-    <html xmlns:wb="http://open.weibo.com/wb">
     <script>
         var require = {
            urlArgs : "v=0.0.36"
@@ -37,6 +41,7 @@
 
     <!-- 合并后的js文件在script-build/src -->
     <script data-main="res/main" src="/res/lib/require/require.js"></script>
+
 
 	<!-- todojp: 删掉handlerbars -->
     <script type="text/javascript" src="/res/lib/require/handlebars.js"></script>
