--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,6 @@
+
+Warning: date(): It is not safe to rely on the system's timezone settings. You are *required* to use the date.timezone setting or the date_default_timezone_set() function. In case you used any of those methods and you are still getting this warning, you most likely misspelled the timezone identifier. We selected the timezone 'UTC' for now, but please set date.timezone to select your timezone. in /Users/junqiang/www/ps/public/src/index.php on line 3
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,19 +17,7 @@
     <meta http-equiv="cache-control" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" /> 
-    <link rel="stylesheet" type="text/css" href="/css/homepage.css?ver=0.0.36"  >
-    <link rel="stylesheet" type="text/css" href="/css/index.css?ver=0.0.36">
-    <link rel="stylesheet" type="text/css" href="/css/common.css?ver=0.0.36">
-    <link rel="stylesheet" type="text/css" href="/css/commonNew.css?ver=0.0.36">
-    <link rel="stylesheet" type="text/css" href="/css/ask.css?ver=0.0.36">
-    <link rel="stylesheet" type="text/css" href="/css/trend.css?ver=0.0.36"  >
-    <link rel="stylesheet" type="text/css" href="/css/activity.css?ver=0.0.36"  >
-    <link rel="stylesheet" type="text/css" href="/css/replydetailplay.css?ver=0.0.36"  >
-    <link rel="stylesheet" type="text/css" href="/css/channel.css?ver=0.0.36"  >
-    <link rel="stylesheet" type="text/css" href="/res/lib/face-selector/face-selector.css">
-    <link rel="stylesheet" type="text/css" href="/css/setting.css?ver=0.0.36"  >
-    <link rel="stylesheet" type="text/css" href="/css/message.css?ver=0.0.36" >
-    <link rel="stylesheet" type="text/css" href="/css/search.css?ver=0.0.36"  >
+ 
     <!-- plugin -->
     <link rel="stylesheet" type="text/css" href="/res/lib/fancybox/jquery.fancybox.css" > 
     <link rel="stylesheet" type="text/css" href="/res/lib/face-selector/face-selector.css">
@@ -35,25 +26,14 @@
     <!-- css -->
     <script>
         var require = {
-           urlArgs : "v=0.0.36"
+            urlArgs : "v=20160104125404"
         };
     </script>
 
     <!-- 生成css集合 -->
-            <link rel="stylesheet" type="text/css" href="/css/homepage.css"  >
-        <link rel="stylesheet" type="text/css" href="/css/index.css">
-        <link rel="stylesheet" type="text/css" href="/css/common.css">
-        <link rel="stylesheet" type="text/css" href="/css/commonNew.css">
-        <link rel="stylesheet" type="text/css" href="/css/ask.css">
-        <link rel="stylesheet" type="text/css" href="/css/trend.css"  >
-        <link rel="stylesheet" type="text/css" href="/css/activity.css"  >
-        <link rel="stylesheet" type="text/css" href="/css/replydetailplay.css"  >
-        <link rel="stylesheet" type="text/css" href="/css/channel.css"  >
-        <link rel="stylesheet" type="text/css" href="/css/setting.css"  >
-        <link rel="stylesheet" type="text/css" href="/css/message.css" >
-        <link rel="stylesheet" type="text/css" href="/css/search.css"  >
-        <!-- 未合并后的js文件在src/src -->
-        <script data-main="src/main" src="/src/lib/require/require.js"></script>
+            <link rel="stylesheet" type="text/css" href="/css/main.css?20160104125404"  >
+        <!-- 合并后的js文件在script-build/src -->
+        <script data-main="res/main" src="/res/lib/require/require.js"></script>
     
 
 
