--- a/public/index.html
+++ b/public/index.html
@@ -24,21 +24,27 @@
     <!-- css -->
     <script>
         var require = {
-            urlArgs : "v=20160105101137"
+            urlArgs : "v=20160105161641"
         };
     </script>
 
-<<<<<<< HEAD
-    <!-- 合并后的js文件在script-build/src -->
-    <script data-main="res/main" src="/res/lib/require/require.js"></script>
-=======
     <!-- 生成css集合 -->
-            <link rel="stylesheet" type="text/css" href="/css/main.css?20160105101137"  >
-        <!-- 合并后的js文件在script-build/src -->
-        <script data-main="res/main" src="/res/lib/require/require.js"></script>
+            <link rel="stylesheet" type="text/css" href="/css/homepage.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/index.css">
+        <link rel="stylesheet" type="text/css" href="/css/common.css">
+        <link rel="stylesheet" type="text/css" href="/css/commonNew.css">
+        <link rel="stylesheet" type="text/css" href="/css/ask.css">
+        <link rel="stylesheet" type="text/css" href="/css/trend.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/activity.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/replydetailplay.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/channel.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/setting.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/message.css" >
+        <link rel="stylesheet" type="text/css" href="/css/search.css"  >
+        <!-- 未合并后的js文件在src/src -->
+        <script data-main="src/main" src="/src/lib/require/require.js"></script>
     
 
->>>>>>> ef7464c3f2603b9f80ebfe1c659991647cc701e9
 
 	<!-- todojp: 删掉handlerbars -->
     <script type="text/javascript" src="/res/lib/require/handlebars.js"></script>
