--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
             <span class="search-name clearfix">
 
             <var>{{nickname}}</var>
-            <i class="bg-sprite-rebirth small-v-icon"></i>
+                // <i class="bg-sprite-rebirth small-v-icon"></i>
             </span>
         </div>
     </a>
@@ -176,9 +176,7 @@
 
     <script type="text/x-handlebars-template" id="tpl_search_threads">
     {{#each data}}
-        <a href="#replydetail/{{ask_id}}" target="_blank">
             <div class="correlation-font">{{desc}}</div>
-        </a>
     {{/each}}
     </script>
 
