--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
             <span class="search-name clearfix">
 
             <var>{{nickname}}</var>
-            <i class="bg-sprite-rebirth small-v-icon"></i>
+            // <i class="bg-sprite-rebirth small-v-icon"></i>
             </span>
         </div>
     </a>
