--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,12 @@
     <!-- plugin -->
     <link rel="stylesheet" type="text/css" href="/res/lib/fancybox/jquery.fancybox.css" > 
     <link rel="stylesheet" type="text/css" href="/res/lib/face-selector/face-selector.css">
+    <link rel="stylesheet" type="text/css" href="/res/lib/fancybox/main.css" > 
 
     <!-- css -->
     <script>
         var require = {
-            urlArgs : "v=20160112104014"
+            urlArgs : "v=20160114221754"
         };
     </script>
 
@@ -42,6 +43,11 @@
         <link rel="stylesheet" type="text/css" href="/css/search.css"  >
         <!-- 未合并后的js文件在src/src -->
         <script data-main="src/main" src="/src/lib/require/require.js"></script>
+    
+
+
+	<!-- todojp: 删掉handlerbars -->
+    <script type="text/javascript" src="/res/lib/require/handlebars.js"></script>
     <!--[if IE]>
          <script src="/res/lib/respond/respond.js" ></script>
          <script src="/res/lib/es5/es5-sham.js" ></script>
@@ -152,7 +158,29 @@
 	<script type="text/javascript" charset="utf-8" src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=1211791030&debug=true"></script>
     <script type="text/javascript" charset="utf-8" src="http://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="101268487" data-redirecturi="http://www.tupppai.com"></script>
 
+	<!-- todojp: 删掉handlerbars -->
+    <script type="text/x-handlebars-template" id="tpl_search_users">
+    {{#each data}}
+    <a href="#homepage/reply/{{uid}}" target="_blank">
+        <div class="search-item">
+            <img src="{{avatar}}" alt="">
+            <span class="search-name clearfix">
 
+            <var>{{nickname}}</var>
+            <i class="bg-sprite-rebirth small-v-icon"></i>
+            </span>
+        </div>
+    </a>
+    {{/each}}
+    </script>
+
+    <script type="text/x-handlebars-template" id="tpl_search_threads">
+    {{#each data}}
+        <a href="#replydetail/{{ask_id}}" target="_blank">
+            <div class="correlation-font">{{desc}}</div>
+        </a>
+    {{/each}}
+    </script>
 
 <script> 
     //百度统计
