--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     </script>
 
     <!-- 生成css集合 -->
-            <link rel="stylesheet" type="text/css" href="/css/homepage.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/homepage.css"  >
         <link rel="stylesheet" type="text/css" href="/css/index.css">
         <link rel="stylesheet" type="text/css" href="/css/common.css">
         <link rel="stylesheet" type="text/css" href="/css/commonNew.css">
@@ -42,7 +42,7 @@
         <link rel="stylesheet" type="text/css" href="/css/search.css"  >
         <!-- 未合并后的js文件在src/src -->
         <script data-main="src/main" src="/src/lib/require/require.js"></script>
-    
+        <script src="/src/lib/pingpp/pingpp.js"></script>
 
 
     <!--[if IE]>
@@ -151,6 +151,7 @@
         <div class="footer" id="footerView"></div>
     </div>   
     </body>
+
     <script id="-mob-share" src="http://f1.webshare.mob.com/code/mob-share.js?appkey=de97f78883b2"></script>
 	<script type="text/javascript" charset="utf-8" src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=1211791030&debug=true"></script>
     <script type="text/javascript" charset="utf-8" src="http://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="101268487" data-redirecturi="http://www.tupppai.com"></script>
