--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,9 @@
                     <i class="askForP-icon clearfix bg-sprite-new "></i>
                 </a>
                 <div id="askReplyUploadHove" class="ask-uploading-popup-hide blo">
-                    <i class="askForP-icon clearfix bg-sprite-new" ></i>
+                    <i class="askForP-icon clearfix bg-sprite-new" >
+                        <em class="ask-explain">点击↓</em>
+                    </i>
                     <div class="login-popup-contain clearfix">
                         <div id="attrChannelId" class="login-demand-p">
                              <a href="#ask-uploading-popup" class="ask-uploading-popup">
