--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,9 @@
                 <i class="scrollTop-icon clearfix bg-sprite-new blo"></i>
                 
                 <a href="#login-popup" class="login-popup  hide login-popup-hide">
-                    <i class="askForP-icon clearfix bg-sprite-new "></i>
+                    <i class="askForP-icon clearfix bg-sprite-new ">
+                        <em class="ask-explain blo">点击↓</em>
+                    </i>
                 </a>
                 <div id="askReplyUploadHove" class="ask-uploading-popup-hide blo">
                     <i class="askForP-icon clearfix bg-sprite-new" ></i>
