--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <!-- css -->
     <script>
         var require = {
-            urlArgs : "v=20160118175057"
+            urlArgs : "v=20160118180215"
         };
     </script>    
 
@@ -70,7 +70,7 @@
                 
                 <a href="#login-popup" class="login-popup  hide login-popup-hide">
                     <i class="askForP-icon clearfix bg-sprite-new ">
-                        <em class="ask-explain blo">点击↓</em>
+                        <em class="ask-explain blo">点击上传求P↓</em>
                     </i>
                 </a>    
                 <div id="askReplyUploadHove" class="ask-uploading-popup-hide blo">
