--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <!-- css -->
     <script>
         var require = {
-            urlArgs : "v=20160118172529"
+            urlArgs : "v=20160120172943"
         };
     </script>    
 
@@ -39,8 +39,8 @@
         <link rel="stylesheet" type="text/css" href="/css/channel.css"  >
         <link rel="stylesheet" type="text/css" href="/css/setting.css"  >
         <link rel="stylesheet" type="text/css" href="/css/message.css" >
-        <link rel="stylesheet" type="text/css" href="/css/search.css"  >
         <link rel="stylesheet" type="text/css" href="/css/money.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/search.css"  >
         <!-- 未合并后的js文件在src/src -->
         <script data-main="src/main" src="/src/lib/require/require.js"></script>
         
@@ -71,9 +71,9 @@
                 
                 <a href="#login-popup" class="login-popup  hide login-popup-hide">
                     <i class="askForP-icon clearfix bg-sprite-new ">
-                        <em class="ask-explain blo">点击↓</em>
+                        <em class="ask-explain blo">点击上传求P↓</em>
                     </i>
-                </a>
+                </a>    
                 <div id="askReplyUploadHove" class="ask-uploading-popup-hide blo">
                     <i class="askForP-icon clearfix bg-sprite-new" ></i>
                     <div class="login-popup-contain clearfix">
