--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
         <!-- header nav  -->
         <div class="header-container">
             <div  class="header-back">
+                <div class="header-block"></div>
                <div id="headerView"></div>
             </div>
         </div>
