--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <!-- css -->
     <script>
         var require = {
-            urlArgs : "v=20160121133847"
+            urlArgs : "v=20160125142148"
         };
     </script>    
 
@@ -63,8 +63,8 @@
 
         <!-- header nav  -->
         <div class="header-container">
-            <div  class="header-back">
-                <div class="header-block"></div>
+            <div  class="header-block">
+                <div class="header-back"></div>
                <div id="headerView"></div>
             </div>
         </div>
