--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
         <link rel="stylesheet" type="text/css" href="/css/message.css" >
         <link rel="stylesheet" type="text/css" href="/css/search.css"  >
         <link rel="stylesheet" type="text/css" href="/css/money.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/task.css"  >
+        <link rel="stylesheet" type="text/css" href="/css/sharecourse.css"  >
         <!-- 未合并后的js文件在src/src -->
         <script src="/src/lib/pingpp/pingpp.js"></script>
         <script src="/src/lib/payWeixin/ap.js"></script>
