--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,8 @@
         <link rel="stylesheet" type="text/css" href="/css/money.css"  >
         <link rel="stylesheet" type="text/css" href="/css/task.css"  >
         <link rel="stylesheet" type="text/css" href="/css/sharecourse.css"  >
+        <link rel="stylesheet" type="text/css" href="/res/lib/fancybox/jquery.fancybox.css">
+        <link rel="stylesheet" type="text/css" href="/res/lib/face-selector/face-selector.css">
         <!-- 未合并后的js文件在src/src -->
         <script src="/src/lib/pingpp/pingpp.js"></script>
         <script src="/src/lib/payWeixin/ap.js"></script>
