--- a/public/sharecourse/cn/shareCourse.html
+++ b/public/sharecourse/cn/shareCourse.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-	<title>僵尸归来之尸鬼虐恋</title>
+	<title>图派教程</title>
 	<link rel="stylesheet" href="../css/reset.css">
 	<link rel="stylesheet" href="../css/sharecourse.css">
 
@@ -18,7 +18,7 @@
 		</div>
 		<div class="course-header clearfix">
 			<a href="" class="course-head-left">
-				<span><img src="<%= avatar %>" alt=""></span>
+				<span><img src="" alt=""></span>
 	    		<i class="middle-v-icon blo"></i>
 			</a>
 			<div class="course-head-right">
@@ -50,7 +50,7 @@
 			<div class="course-big-pic">
 <!-- 				<%  var i = 0;  _.each(ask_uploads, function(ask,i) { i++; %>
 					<% if(i == 1) { %> -->
-				<a href=""><img src="<%= image_url %>" alt=""></a>
+				<a href=""><img src="" alt=""></a>
 <!-- 					<% } %>
 				<% }) %> -->
 			</div>
@@ -68,7 +68,9 @@
     <script src="../js/swiper.3.1.7.jquery.min.js" type="text/javascript"></script>
     <script src="../js/swiper.animate1.0.2.min.js" type="text/javascript"></script>
     <script src="../js/fx.js" type="text/javascript"></script>
+	<script src="../js/moment.js" type="text/javascript"></script>
 	<script src="../js/common.js" type="text/javascript"></script>
+	<script src="../js/getVariable.js" type="text/javascript"></script>
 	<script src="../js/sharecourse.js" type="text/javascript"></script>
 </body>
 </html>
