--- a/public/sharecourse/cn/shareCourse.html
+++ b/public/sharecourse/cn/shareCourse.html
@@ -50,6 +50,7 @@
 			<div class="course-big-pic">
 				<a href=""><img src="" alt=""></a>
 			</div>
+			<div class="insert blo"></div>
 		</div>
 
 		<a class="course-fix">
