--- a/public/sharecourse/cn/shareCourse.html
+++ b/public/sharecourse/cn/shareCourse.html
@@ -12,8 +12,8 @@
 	<div class="share-course-content">
 		<div class="header">
 			<div class="header-box clearfix">
-				<a href="sharecourse.html" class="course-p share-channge">详情</a>
-				<a href="task.html" class="task-p">作业</a>
+				<div class="course-p share-channge">详情</div>
+				<div class="task-p">作业</div>
 			</div>
 		</div>
 		<div class="course-header clearfix">
