--- a/public/sharecourse/cn/shareCourse.html
+++ b/public/sharecourse/cn/shareCourse.html
@@ -22,20 +22,19 @@
 	    		<i class="middle-v-icon blo"></i>
 			</a>
 			<div class="course-head-right">
-				<a href="" class="course-name"><%= nickname %></a>
+				<a href="" class="course-name"></a>
 				<span class="course-name-time">
-					<% var timeMatrixing = time(create_time); %><%= timeMatrixing %>
 				</span>
 			</div>
 		</div>
 
 		<div class="course-explain">
-			<h2 class="explain-header"><%= title %></h2>
-			<p class="explain-p"><%= description %></p>
+			<h2 class="explain-header"></h2>
+			<p class="explain-p"></p>
 			<div class="share-course-fun clearfix">
 				<div class="task-like task-super-like" data-type="<%= type %>" data-id="<%= id %>" data-love="0">
 					<i class="like-icon"></i>
-					<span class="like-num like-count <%= (uped)? 'like-color': '' %>"><%= up_count %></span>
+					<span class="like-num like-count <%= (uped)? 'like-color': '' %>"></span>
 				</div>
 				<div class="see-num">
 					<i class="see-icon"></i>
