--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="图派">
-    <meta name="keywords" content="PS,社区">
+    <title>图派 - 图派app官方网站 - ps大神聚集地</title>
+    <meta name="keywords" content="图派,图派app,图派ios版,图派安卓版">
+    <meta name="description" content="图派app是由图派出品的一款互助型手机P图软件。快来下载图派感受真正的图片创意。">
     <!-- wb -->
     <meta property="wb:webmaster" content="cd0d265f8e3e0cb0" /> 
     <html xmlns:wb="http://open.weibo.com/wb">
@@ -55,10 +56,9 @@
          <script src="/res/lib/es5/es5-sham.js" ></script>
          <script src="/res/lib/mediaqueries/css3-mediaqueries.js" ></script>
          <script src="/res/lib/PIE/PIE.js" ></script>
-    <![endif]--> 
-    <title>图派</title>
-</head> 
- 
+    <![endif]-->
+</head>
+
 <body>
     <div class="container">
 
