--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -15,7 +15,7 @@
     <!-- require conifg-->
     
     <script>
-        var baseUri = '/html';
+        var baseUri = '/boys';
 
         var require = {
             urlArgs : "v=1457069334601",
@@ -25,7 +25,7 @@
 
     <link rel="stylesheet" type="text/css" href="/css/main.css?1457069334601"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/html/src/main" src="/html/src/lib/require/require.js"></script>
+    <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
     <!--[if IE]>
          <script src="./html/src/lib/respond/respond.js" ></script>
          <script src="./html/src/lib/es5/es5-sham.js" ></script>
@@ -38,8 +38,8 @@
 <body>
     <div class="container">
         <div class="inner-container" id="contentView">
-            asdf
         </div>  
+        asdf
         <div class="clear"></div>        
     </div>   
     </body>
