--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -18,12 +18,13 @@
         var baseUri = '/boys';
 
         var require = {
-            urlArgs : "v=1457069334601",
+            urlArgs : "v=1458035487790",
             timeout : 100,
         };
     </script>    
 
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1457069334601"  >
+    <link rel="stylesheet" type="text/css" href="/css/swiper.css?1458035487790"  >
+    <link rel="stylesheet" type="text/css" href="/css/main.css?1458035487790"  >
     <!-- 合并后的js文件在script-build/src -->
     <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
     <!--[if IE]>
