--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -12,21 +12,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" /> 
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
- 
     <!-- require conifg-->
+    
     <script>
-        var baseUri = '/boys';
+        var baseUri = '/html';
 
         var require = {
-            urlArgs : "v=1458035487790",
+            urlArgs : "v=1458182917959",
             timeout : 100,
         };
     </script>    
 
-    <link rel="stylesheet" type="text/css" href="/css/swiper.css?1458035487790"  >
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458035487790"  >
+    <link rel="stylesheet" type="text/css" href="/css/swiper.css?1458182917959"  >
+    <link rel="stylesheet" type="text/css" href="/css/main.css?1458182917959"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
+    <script data-main="/html/src/main" src="/html/src/lib/require/require.js"></script>
     <!--[if IE]>
          <script src="./html/src/lib/respond/respond.js" ></script>
          <script src="./html/src/lib/es5/es5-sham.js" ></script>
