--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -15,7 +15,7 @@
     <!-- require conifg-->
     
     <script>
-        var baseUri = '/html';
+        var baseUri = '/boys';
 
         var require = {
             urlArgs : "v=1458182917959",
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="/css/swiper.css?1458182917959"  >
     <link rel="stylesheet" type="text/css" href="/css/main.css?1458182917959"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/html/src/main" src="/html/src/lib/require/require.js"></script>
+    <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
     <!--[if IE]>
          <script src="./html/src/lib/respond/respond.js" ></script>
          <script src="./html/src/lib/es5/es5-sham.js" ></script>
