--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -18,20 +18,20 @@
         var baseUri = '/boys';
 
         var require = {
-            urlArgs : "v=1458182917959",
+            urlArgs : "v=1458212073402",
             timeout : 100,
         };
     </script>    
 
-    <link rel="stylesheet" type="text/css" href="/css/swiper.css?1458182917959"  >
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458182917959"  >
+    <link rel="stylesheet" type="text/css" href="/css/swiper.css?1458212073402"  >
+    <link rel="stylesheet" type="text/css" href="/css/main.css?1458212073402"  >
     <!-- 合并后的js文件在script-build/src -->
     <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
     <!--[if IE]>
-         <script src="./html/src/lib/respond/respond.js" ></script>
-         <script src="./html/src/lib/es5/es5-sham.js" ></script>
-         <script src="./html/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
-         <script src="./html/src/lib/PIE/PIE.js" ></script>
+         <script src="./boys/src/lib/respond/respond.js" ></script>
+         <script src="./boys/src/lib/es5/es5-sham.js" ></script>
+         <script src="./boys/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
+         <script src="./boys/src/lib/PIE/PIE.js" ></script>
     <![endif]--> 
     <title>图派</title>
 </head> 
