--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" /> 
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script src="http://www.loiter.us:8000/target/target-script-min.js#anonymous"></script>
     <!-- require conifg-->
     
     <script>
