--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -36,7 +36,7 @@
     <title>图派</title>
 </head> 
  
-<body>
+<body data-rand="1">
     <div class="container">
         <div class="inner-container" id="contentView">
         </div>  
