--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -12,19 +12,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" /> 
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script src="http://www.loiter.us:8000/target/target-script-min.js#anonymous"></script>
     <!-- require conifg-->
     
     <script>
         var baseUri = '/boys';
 
         var require = {
-            urlArgs : "v=1458212073402",
+            urlArgs : "v=1458626306394",
             timeout : 100,
         };
     </script>    
 
-    <link rel="stylesheet" type="text/css" href="/css/swiper.css?1458212073402"  >
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458212073402"  >
+    <link rel="stylesheet" type="text/css" href="/css/swiper.css?1458626306394"  >
+    <link rel="stylesheet" type="text/css" href="/css/main.css?1458626306394"  >
     <!-- 合并后的js文件在script-build/src -->
     <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
     <!--[if IE]>
@@ -36,7 +37,7 @@
     <title>图派</title>
 </head> 
  
-<body data-rand="1" data-desc="2-1" data-reason='你太帅了' >
+<body>
     <div class="container">
         <div class="inner-container" id="contentView">
         </div>  
