--- a/public/tasks/index.html
+++ b/public/tasks/index.html
@@ -16,7 +16,7 @@
     <!-- require conifg-->
     
     <script>
-        var baseUri = '/html';
+        var baseUri = '/tasks';
 
         var require = {
             urlArgs : "v=1457069334601",
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" type="text/css" href="/css/main.css?1457069334601"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/html/src/main" src="/html/src/lib/require/require.js"></script>
+    <script data-main="/tasks/src/main" src="/tasks/src/lib/require/require.js"></script>
     <!--[if IE]>
          <script src="./html/src/lib/respond/respond.js" ></script>
          <script src="./html/src/lib/es5/es5-sham.js" ></script>
