--- a/public/tasks/index.html
+++ b/public/tasks/index.html
@@ -18,12 +18,12 @@
         var baseUri = '/tasks';
 
         var require = {
-            urlArgs : "v=1458786290254",
+            urlArgs : "v=1458788830868",
             timeout : 100,
         };
     </script>    
 
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458786290254"  >
+    <link rel="stylesheet" type="text/css" href="/css/main.css?1458788830868"  >
     <!-- 合并后的js文件在script-build/src -->
     <script data-main="/tasks/src/main" src="/tasks/src/lib/require/require.js"></script>
     <!--[if IE]>
@@ -37,6 +37,7 @@
  
 <body>
     <div class="container">
+        <div id="headerContainer"></div>
         <div class="inner-container" id="contentView">
         </div>  
         <div class="clear"></div>        
