--- a/public/tasks/index.html
+++ b/public/tasks/index.html
@@ -18,29 +18,19 @@
         var baseUri = '/tasks';
 
         var require = {
-<<<<<<< HEAD
-            urlArgs : "v=1458788313770",
-=======
-            urlArgs : "v=1458788830868",
-
->>>>>>> bef7b1ab06d6c545f20fdc964271ec166d9e4299
+            urlArgs : "v=1458794162158",
             timeout : 100,
         };
     </script>    
 
-<<<<<<< HEAD
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458788313770"  >
-=======
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458788830868"  >
-
->>>>>>> bef7b1ab06d6c545f20fdc964271ec166d9e4299
+    <link rel="stylesheet" type="text/css" href="/css/main.css?1458794162158"  >
     <!-- 合并后的js文件在script-build/src -->
     <script data-main="/tasks/src/main" src="/tasks/src/lib/require/require.js"></script>
     <!--[if IE]>
-         <script src="./html/src/lib/respond/respond.js" ></script>
-         <script src="./html/src/lib/es5/es5-sham.js" ></script>
-         <script src="./html/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
-         <script src="./html/src/lib/PIE/PIE.js" ></script>
+         <script src="./tasks/src/lib/respond/respond.js" ></script>
+         <script src="./tasks/src/lib/es5/es5-sham.js" ></script>
+         <script src="./tasks/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
+         <script src="./tasks/src/lib/PIE/PIE.js" ></script>
     <![endif]--> 
     <title>图派</title>
 </head> 
