--- a/public/tasks/index.html
+++ b/public/tasks/index.html
@@ -15,35 +15,17 @@
     <!-- require conifg-->
     
     <script>
-        var baseUri = '/html';
+        var baseUri = '/tasks';
 
         var require = {
-<<<<<<< HEAD
-            urlArgs : "v=1458875692280",
-=======
-<<<<<<< HEAD
-            urlArgs : "v=1458871728507",
-=======
-            urlArgs : "v=1458813900329",
-
->>>>>>> 13120f8a4d1fa72ee359241c180aed8e2a3d1a9f
->>>>>>> f41c88f3ded9d92a5194ceff1aabbd882bce10d8
+            urlArgs : "v=1458885874220",
             timeout : 100,
         };
     </script>    
 
-<<<<<<< HEAD
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458875692280"  >
-=======
-<<<<<<< HEAD
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458871728507"  >
-=======
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458813900329"  >
-
->>>>>>> 13120f8a4d1fa72ee359241c180aed8e2a3d1a9f
->>>>>>> f41c88f3ded9d92a5194ceff1aabbd882bce10d8
+    <link rel="stylesheet" type="text/css" href="/css/main.css?1458885874220"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/html/src/main" src="/html/src/lib/require/require.js"></script>
+    <script data-main="/tasks/src/main" src="/tasks/src/lib/require/require.js"></script>
     <!--[if IE]>
          <script src="./tasks/src/lib/respond/respond.js" ></script>
          <script src="./tasks/src/lib/es5/es5-sham.js" ></script>
