--- a/public/tasks/index.html
+++ b/public/tasks/index.html
@@ -18,19 +18,19 @@
         var baseUri = '/tasks';
 
         var require = {
-            urlArgs : "v=1458787075325",
+            urlArgs : "v=1458872364454",
             timeout : 100,
         };
     </script>    
 
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1458787075325"  >
+    <link rel="stylesheet" type="text/css" href="/css/main.css?1458872364454"  >
     <!-- 合并后的js文件在script-build/src -->
     <script data-main="/tasks/src/main" src="/tasks/src/lib/require/require.js"></script>
     <!--[if IE]>
-         <script src="./html/src/lib/respond/respond.js" ></script>
-         <script src="./html/src/lib/es5/es5-sham.js" ></script>
-         <script src="./html/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
-         <script src="./html/src/lib/PIE/PIE.js" ></script>
+         <script src="./tasks/src/lib/respond/respond.js" ></script>
+         <script src="./tasks/src/lib/es5/es5-sham.js" ></script>
+         <script src="./tasks/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
+         <script src="./tasks/src/lib/PIE/PIE.js" ></script>
     <![endif]--> 
     <title>图派</title>
 </head> 
