--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
          <script src="/res/lib/mediaqueries/css3-mediaqueries.js" ></script>
          <script src="/res/lib/PIE/PIE.js" ></script>
     <![endif]--> 
-    <title>图派</title>
+    <title>出品联盟</title>
 </head> 
  
 <body>
