--- a/public/services/index.html
+++ b/public/services/index.html
@@ -15,7 +15,7 @@
     <!-- require conifg-->
     
     <script>
-        var baseUri = '/tasks';
+        var baseUri = '/services';
 
         var require = {
             urlArgs : "v=1458899146389",
@@ -25,12 +25,12 @@
 
     <link rel="stylesheet" type="text/css" href="/css/main.css?1458899146389"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/tasks/src/main" src="/tasks/src/lib/require/require.js"></script>
+    <script data-main="/services/src/main" src="/services/src/lib/require/require.js"></script>
     <!--[if IE]>
-         <script src="./tasks/src/lib/respond/respond.js" ></script>
-         <script src="./tasks/src/lib/es5/es5-sham.js" ></script>
-         <script src="./tasks/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
-         <script src="./tasks/src/lib/PIE/PIE.js" ></script>
+         <script src="./services/src/lib/respond/respond.js" ></script>
+         <script src="./services/src/lib/es5/es5-sham.js" ></script>
+         <script src="./services/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
+         <script src="./services/src/lib/PIE/PIE.js" ></script>
     <![endif]--> 
     <title>图派</title>
 </head> 
