--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -19,20 +19,20 @@
         var baseUri = '/boys';
 
         var require = {
-            urlArgs : "v=1459333453970",
+            urlArgs : "v=1459334267386",
             timeout : 100,
         };
     </script>    
 
-    <link rel="stylesheet" type="text/css" href="/css/swiper.css?1459333453970"  >
-    <link rel="stylesheet" type="text/css" href="/css/boy.css?1459333453970"  >
+    <link rel="stylesheet" type="text/css" href="/css/swiper.min.css?1459334267386"  >
+    <link rel="stylesheet" type="text/css" href="/css/boy.min.css?1459334267386"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
+    <script data-main="/boys/res/main" src="/boys/res/lib/require/require.js"></script>
     <!--[if IE]>
-         <script src="./boys/src/lib/respond/respond.js" ></script>
-         <script src="./boys/src/lib/es5/es5-sham.js" ></script>
-         <script src="./boys/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
-         <script src="./boys/src/lib/PIE/PIE.js" ></script>
+         <script src="./boys/res/lib/respond/respond.js" ></script>
+         <script src="./boys/res/lib/es5/es5-sham.js" ></script>
+         <script src="./boys/res/lib/mediaqueries/css3-mediaqueries.js" ></script>
+         <script src="./boys/res/lib/PIE/PIE.js" ></script>
     <![endif]--> 
     <title>图派</title>
 </head> 
