--- a/public/services/index.html
+++ b/public/services/index.html
@@ -37,6 +37,7 @@
  
 <body>
     <div class="container">
+        <div id="indexMenu"></div>
         <div class="inner-container" id="contentView">
         </div>  
         <div class="clear"></div>        
