--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -12,45 +12,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" /> 
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script src="http://www.loiter.us:8000/target/target-script-min.js#anonymous"></script>
     <!-- require conifg-->
     
     <script>
         var baseUri = '/boys';
 
         var require = {
-<<<<<<< HEAD
-<<<<<<< HEAD
-            urlArgs : "v=1459345960195",
-=======
-            urlArgs : "v=1459391965862",
->>>>>>> master
-=======
-            urlArgs : "v=1459391965862",
->>>>>>> 59412934cf5bf4ffd08af66585ba3b829f416c52
+            urlArgs : "v=1459401854779",
             timeout : 100,
         };
     </script>    
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <link rel="stylesheet" type="text/css" href="/css/swiper.min.css?1459345960195"  >
-    <link rel="stylesheet" type="text/css" href="/css/boy.min.css?1459345960195"  >
-=======
-    <link rel="stylesheet" type="text/css" href="/css/swiper.min.css?1459391965862"  >
-    <link rel="stylesheet" type="text/css" href="/css/boy.min.css?1459391965862"  >
->>>>>>> master
-=======
-    <link rel="stylesheet" type="text/css" href="/css/swiper.min.css?1459391965862"  >
-    <link rel="stylesheet" type="text/css" href="/css/boy.min.css?1459391965862"  >
->>>>>>> 59412934cf5bf4ffd08af66585ba3b829f416c52
+    <link rel="stylesheet" type="text/css" href="/css/boy-main.css?1459401854779"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/boys/res/main" src="/boys/res/lib/require/require.js"></script>
+    <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
     <!--[if IE]>
-         <script src="./boys/res/lib/respond/respond.js" ></script>
-         <script src="./boys/res/lib/es5/es5-sham.js" ></script>
-         <script src="./boys/res/lib/mediaqueries/css3-mediaqueries.js" ></script>
-         <script src="./boys/res/lib/PIE/PIE.js" ></script>
+         <script src="./boys/src/lib/respond/respond.js" ></script>
+         <script src="./boys/src/lib/es5/es5-sham.js" ></script>
+         <script src="./boys/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
+         <script src="./boys/src/lib/PIE/PIE.js" ></script>
     <![endif]--> 
     <title>图派</title>
 </head> 
