--- a/public/services/index.html
+++ b/public/services/index.html
@@ -42,5 +42,17 @@
         </div>  
         <div class="clear"></div>        
     </div>   
-    </body>
+
+    <!-- alert弹窗 -->
+    <div id="alert_show" class="fix-alert toast-hide">
+        <div class="ale-kong"></div>
+        <div class="ale">
+            <div class="ale-head">标题</div>
+            <div class="ale-content"></div>
+            <div class="ale-button clearfix">
+                <span class="toast-cannel">确定</span>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
