--- a/public/main/index.html
+++ b/public/main/index.html
@@ -24,11 +24,11 @@
         var baseUri = '/main';
 
         var require = {
-            urlArgs : "v=1463105263998",
+            urlArgs : "v=1463121619705",
             timeout : 100,
         };
     </script>
-    <link rel="stylesheet" type="text/css" href="/css/main.css?1463105263998"  >
+    <link rel="stylesheet" type="text/css" href="css/main.css?1463121619705"  >
     <script data-main="/main/src/main" src="/main/src/lib/require/require.js"></script>
     <script src="/main/src/lib/pingpp/pingpp.js"></script>
     <script src="/main/src/lib/payWeixin/ap.js"></script>
