--- a/public/services/index.html
+++ b/public/services/index.html
@@ -19,21 +19,19 @@
             var type = 'hash';
 
             var require = {
-                urlArgs : "v=1463123407931",
-
+                urlArgs : "v=1463124646685",
                 timeout : 100,
             };
         </script>    
 
-        <link rel="stylesheet" type="text/css" href="css/main.css?1463123407931"  >
-
+        <link rel="stylesheet" type="text/css" href="css/main.css?1463124646685"  >
         <!-- 合并后的js文件在script-build/src -->
-        <script data-main="/services/res/main" src="/services/res/lib/require/require.js"></script>
+        <script data-main="/services/src/main" src="/services/src/lib/require/require.js"></script>
         <!--[if IE]>
-             <script src="./services/res/lib/respond/respond.js" ></script>
-             <script src="./services/res/lib/es5/es5-sham.js" ></script>
-             <script src="./services/res/lib/mediaqueries/css3-mediaqueries.js" ></script>
-             <script src="./services/res/lib/PIE/PIE.js" ></script>
+             <script src="./services/src/lib/respond/respond.js" ></script>
+             <script src="./services/src/lib/es5/es5-sham.js" ></script>
+             <script src="./services/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
+             <script src="./services/src/lib/PIE/PIE.js" ></script>
         <![endif]--> 
         <title>图派</title>
     </head>
