--- a/public/activity/activity0.3.html
+++ b/public/activity/activity0.3.html
@@ -109,7 +109,7 @@
         <div class="activity-pic activity-pic-1">
             <img src="./img0.3/1.png" height="1134" width="640" alt="">
         </div>
-        <div class="activity-pic activity-pic-2">
+<!--         <div class="activity-pic activity-pic-2">
                 <div class="design-btn middle"></div>
             <img src="./img0.3/2.png" height="1134" width="640" alt="">            
         </div>
@@ -117,7 +117,7 @@
             <div class="design-btn bottom" ></div>
             <img src="./img0.3/3.png" height="1134" width="640" alt="">            
         
-        </div>
+        </div> -->
     </div>
     <script src="./js/zepto.min.js"></script>
 <!--
