--- a/public/activity/activity0.3.html
+++ b/public/activity/activity0.3.html
@@ -107,7 +107,7 @@
 
     <div class="activity-container">
         <div class="activity-pic activity-pic-1">
-            <img src="./img0.3/1.png" height="1134" width="640" alt="">
+            <img src="./img0.3/1.png" height="" width="" alt="">
         </div>
 <!--         <div class="activity-pic activity-pic-2">
                 <div class="design-btn middle"></div>
