--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,36 +10,36 @@
     <meta http-equiv="cache-control" content="max-age=0" />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" /> 
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <!-- require conifg-->
-
+    
     <script>
         var baseUri = '/boys';
 
         var require = {
-            urlArgs : "v=1464082390208",
+            urlArgs : "v=1464083168755",
             timeout : 100,
         };
-    </script>
+    </script>    
 
-    <link rel="stylesheet" type="text/css" href="css/boy-main.min.css?1464082390208"  >
+    <link rel="stylesheet" type="text/css" href="css/boy-main.css?1464083168755"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/boys/res/main" src="/boys/res/lib/require/require.js"></script>
+    <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
     <!--[if IE]>
-         <script src="./boys/res/lib/respond/respond.js" ></script>
-         <script src="./boys/res/lib/es5/es5-sham.js" ></script>
-         <script src="./boys/res/lib/mediaqueries/css3-mediaqueries.js" ></script>
-         <script src="./boys/res/lib/PIE/PIE.js" ></script>
-    <![endif]-->
+         <script src="./boys/src/lib/respond/respond.js" ></script>
+         <script src="./boys/src/lib/es5/es5-sham.js" ></script>
+         <script src="./boys/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
+         <script src="./boys/src/lib/PIE/PIE.js" ></script>
+    <![endif]--> 
     <title>图派</title>
-</head>
-
+</head> 
+ 
 <body>
     <div class="container">
         <div class="inner-container" id="contentView">
-        </div>
-        <div class="clear"></div>
-    </div>
+        </div>  
+        <div class="clear"></div>        
+    </div>   
     </body>
 </html>
