--- a/public/boys/index.html
+++ b/public/boys/index.html
@@ -18,19 +18,19 @@
         var baseUri = '/boys';
 
         var require = {
-            urlArgs : "v=1464083168755",
+            urlArgs : "v=1464083195347",
             timeout : 100,
         };
     </script>    
 
-    <link rel="stylesheet" type="text/css" href="css/boy-main.css?1464083168755"  >
+    <link rel="stylesheet" type="text/css" href="css/boy-main.min.css?1464083195347"  >
     <!-- 合并后的js文件在script-build/src -->
-    <script data-main="/boys/src/main" src="/boys/src/lib/require/require.js"></script>
+    <script data-main="/boys/res/main" src="/boys/res/lib/require/require.js"></script>
     <!--[if IE]>
-         <script src="./boys/src/lib/respond/respond.js" ></script>
-         <script src="./boys/src/lib/es5/es5-sham.js" ></script>
-         <script src="./boys/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
-         <script src="./boys/src/lib/PIE/PIE.js" ></script>
+         <script src="./boys/res/lib/respond/respond.js" ></script>
+         <script src="./boys/res/lib/es5/es5-sham.js" ></script>
+         <script src="./boys/res/lib/mediaqueries/css3-mediaqueries.js" ></script>
+         <script src="./boys/res/lib/PIE/PIE.js" ></script>
     <![endif]--> 
     <title>图派</title>
 </head> 
