--- a/public/main/index.html
+++ b/public/main/index.html
@@ -24,23 +24,23 @@
         var baseUri = '/main';
 
         var require = {
-            urlArgs : "v=1464574242942",
+            urlArgs : "v=1464574306800",
             timeout : 100,
         };
     </script>
-    <link rel="stylesheet" type="text/css" href="css/main.css?1464574242942"  >
-    <script data-main="/main/src/main" src="/main/src/lib/require/require.js"></script>
-    <script src="/main/src/lib/pingpp/pingpp.js"></script>
-    <script src="/main/src/lib/payWeixin/ap.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.min.css?1464574306800"  >
+    <script data-main="/main/res/main" src="/main/res/lib/require/require.js"></script>
+    <script src="/main/res/lib/pingpp/pingpp.js"></script>
+    <script src="/main/res/lib/payWeixin/ap.js"></script>
     <!-- plugin -->
-    <link rel="stylesheet" type="text/css" href="/main/src/lib/fancybox/jquery.fancybox.css" >
-    <link rel="stylesheet" type="text/css" href="/main/src/lib/face-selector/face-selector.css">
+    <link rel="stylesheet" type="text/css" href="/main/res/lib/fancybox/jquery.fancybox.css" >
+    <link rel="stylesheet" type="text/css" href="/main/res/lib/face-selector/face-selector.css">
 
     <!--[if IE]>
-         <script src="/main/src/lib/respond/respond.js" ></script>
-         <script src="/main/src/lib/es5/es5-sham.js" ></script>
-         <script src="/main/src/lib/mediaqueries/css3-mediaqueries.js" ></script>
-         <script src="/main/src/lib/PIE/PIE.js" ></script>
+         <script src="/main/res/lib/respond/respond.js" ></script>
+         <script src="/main/res/lib/es5/es5-sham.js" ></script>
+         <script src="/main/res/lib/mediaqueries/css3-mediaqueries.js" ></script>
+         <script src="/main/res/lib/PIE/PIE.js" ></script>
     <![endif]--> 
 </head>
 
