--- a/public/web/index.html
+++ b/public/web/index.html
@@ -10,24 +10,24 @@
         <meta http-equiv="cache-control" content="max-age=0" />
         <meta http-equiv="cache-control" content="no-cache" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="/web/img/favicon.ico" type="image/x-icon" />
 
         <!-- require conifg-->
-
+        
         <script>
             var baseUri = '';
             var type = 'hash';
 
             var require = {
-                urlArgs : "v=1466491508709",
+                urlArgs : "v=1467010212428",
                 timeout : 100,
             };
         </script>
 
-        <link rel="stylesheet" type="text/css" href="css/main.css?1466491508709"  >
-        <link rel="stylesheet" type="text/css" href="/src/lib/fancybox/jquery.fancybox.css"  >
+        <link rel="stylesheet" type="text/css" href="/web/css/main.css?1467010212428"  >
+        <link rel="stylesheet" type="text/css" href="/web/src/lib/fancybox/jquery.fancybox.css"  >
         <!-- 合并后的js文件在script-build/src -->
-        <script data-main="/src/main" src="/src/lib/require/require.js"></script>
+        <script data-main="/web/src/main" src="/web/src/lib/require/require.js"></script>
         <!--[if IE]>
              <script src=".//src/lib/respond/respond.js" ></script>
              <script src=".//src/lib/es5/es5-sham.js" ></script>
@@ -41,7 +41,7 @@
         <div class="container" id="content-section"></div>
         <div class="footer" id="footer-section">
             <div class="body-loading hide">
-                <!--<img src="/img/loadingDiv.gif" />-->
+                <!--<img src="/web/img/loadingDiv.gif" />-->
                 <div class="spinner">
                     <div class="bounce1"></div>
                     <div class="bounce2"></div>
