--- a/public/services/index.html
+++ b/public/services/index.html
@@ -16,11 +16,8 @@
         
         <script>
             var baseUri = 'services';
-            var b=location.href.match(/\/\?\//);
-            console.log(b);
-            if( !b ){
-                var a =location.href.replace('/index.html','');
-                location.href = a.replace(/([-a-zA-Z0-9@:%_\+.~#?&//=]{2,256}\.[a-z]{2,4}\b(\/[-a-zA-Z0-9@:%_\+.~#?&//=]*)?)#(.*)/,'$1/?/#$3');
+            if( !(location.href.replace('index.html','').match(/services\/\?\//)) ){
+                location.href = location.href.replace(/([-a-zA-Z0-9@:%_\+.~#?&//=]{2,256}\.[a-z]{2,4}\b(\/[-a-zA-Z0-9@:%_\+.~#?&//=]*)?)#(.*)/,'$1?/#$3');
             }
             
             var type = 'hash';
